horizontal scroll has been fixed

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,5 @@
 .app {
-	width: 100vw;
+	max-width: 100%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
